--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,22 @@
 html,
 body {
+  direction: rtl;
   padding: 0;
   padding-bottom: 1vh;
   margin: 0;
   width: 100vw;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: auto;
   min-height: 100vh;
   direction: 'rtl';
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     direction: rtl;
+}
+
+#__next {
+  min-height: 100vh;
+  direction: rtl;
 }
 
 *, *::after, *::before{
